2001-07-24  Richard Hestilow  <hestilow@ximian.com>
	
	* sound-properties-capplet.c (main): Pass in legacy files to
	capplet_init.
	(get_legacy_settings): Use the "Main" config prefix.

2001-07-23  Bradford Hovinen  <hovinen@ximian.com>

	* sound-properties-capplet.c (apply_settings): Make sure ESD gets
	killed if it's supposed to

2001-07-20  Chema Celorio  <chema@celorio.com>

	* RELEASE : 1.5.0

2001-07-19  Bradford Hovinen  <hovinen@ximian.com>

	* Makefile.am: Remove SUBDIRS
	Remove extraneous EXTRA_DIST
	Make sure to include defaults and OAF info files

2001-07-18  Bradford Hovinen  <hovinen@ximian.com>

	* Bonobo_Control_Capplet_sound_properties.oaf: Update for new
	binary name

2001-07-18  Richard Hestilow  <hestilow@ximian.com>

	* sound-properties-capplet.c (create_dialog): Revert that. 

2001-07-18  Richard Hestilow  <hestilow@ximian.com>

	* sound-properties-capplet.c (create_dialog): Change to reflect
	new prototype.

2001-07-17  Chema Celorio  <chema@celorio.com>

	* Makefile.am (SUBDIRS): clean

2001-07-17  Bradford Hovinen  <hovinen@ximian.com>

	* sound-properties-capplet.c (create_dialog): Implement
	(main): Call glade_gnome_init; pass create_dialog to capplet_init
	(setup_dialog): Retrieve the Glade data from the widget passed to
	this function
	(create_dialog): Make sure dialog is destroyed when widget is

	* Makefile.am (EXTRA_DIST): Changed Applications_DATA to
	Applications_in_files
	(INCLUDES): Add -DGLADE_DATADIR

	* sound-properties-capplet.c (setup_dialog): Sensitize events
	check box only if ESD is already enabled

	* sound-properties.glade: Prune dialog down to the two check
	buttons

2001-07-13  Bradford Hovinen  <hovinen@ximian.com>

	* sound-properties-capplet.c (set_moniker_cb): Resolve
	configuration database and store in property frame
	(apply_cb): Retrieve configuration database from property frame
	(create_control_cb): Don't store config database in property
	control